# Site_utilidades

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  gemini_embedder.py  pyproject.toml  requirements.txt  sites.txt
.github/: copilot-instructions.md
crews/: Advanced_Reserarch.py  Desativado__transcription_interpretation_crew.py  Pesquisa_lista_sites.py  crew_analyzer.py  desativado_crew_monitoramento.py  escuta_radio_crew.py  pesquisa_caralho.py  post_crew.py  radio_topic_extractor.py  transcribe_and_analyze_app.py
db/: chroma.sqlite3
images/: _my_images.py
paginas/: advanced_research_page.py  desativado_extrair_topicos_radio.py  desativado_transcription_page.py  download_video.py  monitoramento_page.py  pesquisa_lista_sites.py  pesquisa_noticias.py  post.py  transcribe_and_analyze_page.py  transcription_page.py  welcome.py
temp/: aloi fortaleza_transcricao.txt
tools/: audio_transcription_script.py  audio_transcription_tool.py
