[project]
name = "site-utilidades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.40.1",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.2",
    "streamlit>=1.44.1",
    "streamlit-option-menu>=0.4.0",
    "whisper>=1.1.10",
    "yt-dlp>=2025.3.31",
]
